--- a/package.json
+++ b/package.json
@@ -1,53 +1,25 @@
 {
-  "name": "moblie",
-  "version": "0.1.0",
-  "private": true,
+  "name": "mobile_hny_3.0",
+  "version": "0.0.0",
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "dev": "vite",
+    "build": "vue-tsc --noEmit && vite build",
+    "serve": "vite preview"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
-    "cssnano": "^4.1.10",
-    "postcss-aspect-ratio-mini": "^1.1.0",
-    "postcss-cssnext": "^3.1.0",
+    "vant": "^3.0.16",
+    "vue": "^3.0.5"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-vue": "^1.2.2",
+    "@vue/compiler-sfc": "^3.0.5",
+    "autoprefixer": "^10.2.5",
     "postcss-px-to-viewport": "^1.1.1",
     "postcss-viewport-units": "^0.1.6",
     "postcss-write-svg": "^3.0.1",
-    "vant": "^2.11.1",
-    "vue": "^2.6.11",
-    "vue-router": "^3.2.0",
-    "webpackbar": "^5.0.0-3"
-  },
-  "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-router": "^4.5.9",
-    "@vue/cli-service": "~4.5.0",
-    "babel-eslint": "^10.1.0",
-    "cssnano-preset-advanced": "^4.0.7",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "babel-eslint"
-    },
-    "rules": {}
-  },
-  "browserslist": [
-    "last 2 versions",
-    "android 4",
-    "opera 12"
-  ]
+    "typescript": "^4.1.3",
+    "vite": "^2.3.3",
+    "vite-plugin-style-import": "^0.10.0",
+    "vue-tsc": "^0.0.24"
+  }
 }
